fixed h3 heading on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -446,7 +446,7 @@ footer {
 h3 {
     text-align: center;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 #welcome {
